[Qt][WK2] REGRESSION(r119127): resetting window.internals settings between tests doesn't work properly https://bugs.webkit.org/show_bug.cgi?id=88064

Reviewed by Zoltan Herczeg.

Source/WebKit/qt:

Add missing DumpRenderTreeSupportQt::resetInternalsObject(JSContextRef context) function.

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::resetInternalsObject):
* WebCoreSupport/DumpRenderTreeSupportQt.h:

Tools:

Use resetInternalsObject() instead of injectInternalsObject().

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::resetAfterTest):

LayoutTests:

* platform/qt-5.0-wk2/Skipped: Unskip now passing tests.

Canonical link: https://commits.webkit.org/110276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123841 268f45cc-cd09-0410-ab3c-d52691b4dbfc