Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp
@@ -362,7 +362,7 @@ void InjectedBundlePage::resetAfterTest()
     WKBundleFrameRef frame = WKBundlePageGetMainFrame(m_page);
     JSGlobalContextRef context = WKBundleFrameGetJavaScriptContext(frame);
 #if PLATFORM(QT)
-    DumpRenderTreeSupportQt::injectInternalsObject(context);
+    DumpRenderTreeSupportQt::resetInternalsObject(context);
 #else
     WebCoreTestSupport::resetInternalsObject(context);
 #endif
